--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
         <version>2.52.0</version>
     </dependency>
     <dependency>
+        <groupId>io.appium</groupId>
+        <artifactId>java-client</artifactId>
+        <version>4.1.2</version>
+    </dependency>
+    <dependency>
         <groupId>com.browserstack</groupId>
         <artifactId>browserstack-local-java</artifactId>
         <version>0.3.0</version>
