--- a/android/junit4-examples/pom.xml
+++ b/android/junit4-examples/pom.xml
@@ -22,22 +22,22 @@
     <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.12</version>
+        <version>4.13.2</version>
     </dependency>
     <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
-        <version>1.3.2</version>
+        <version>2.11.0</version>
     </dependency>
     <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-java</artifactId>
-        <version>3.141.59</version>
+        <version>4.4.0</version>
     </dependency>
     <dependency>
         <groupId>io.appium</groupId>
         <artifactId>java-client</artifactId>
-        <version>7.0.0</version>
+        <version>8.1.1</version>
     </dependency>
     <dependency>
         <groupId>com.browserstack</groupId>
@@ -80,8 +80,11 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <includes>
-                                <include>com/browserstack/run_first_test/FirstTest.java</include>
+                                <include>com/browserstack/FirstTest.java</include>
                             </includes>
+                            <systemPropertyVariables>
+                                <config>run_first_test/first.conf.json</config>
+                            </systemPropertyVariables>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -97,8 +100,11 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <includes>
-                                <include>com/browserstack/run_local_test/LocalTest.java</include>
+                                <include>com/browserstack/LocalTest.java</include>
                             </includes>
+                            <systemPropertyVariables>
+                                <config>run_local_test/local.conf.json</config>
+                            </systemPropertyVariables>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -114,8 +120,11 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <includes>
-                                <include>com/browserstack/run_parallel_test/ParallelTest.java</include>
+                                <include>com/browserstack/FirstTest.java</include>
                             </includes>
+                            <systemPropertyVariables>
+                                <config>run_parallel_test/parallel.conf.json</config>
+                            </systemPropertyVariables>
                         </configuration>
                     </plugin>
                 </plugins>
