--- a/android/junit4-examples/pom.xml
+++ b/android/junit4-examples/pom.xml
@@ -119,6 +119,12 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
+                            <parallel>
+                                classes
+                            </parallel>
+                            <threadCount>
+                                2
+                            </threadCount>
                             <includes>
                                 <include>com/browserstack/FirstTest.java</include>
                             </includes>
