--- a/ios/junit5-examples/pom.xml
+++ b/ios/junit5-examples/pom.xml
@@ -22,29 +22,29 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.5.2</version>
+            <version>5.9.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
-            <version>5.5.2</version>
+            <version>5.9.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>1.3.2</version>
+            <version>2.11.0</version>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>3.141.59</version>
+            <version>4.4.0</version>
         </dependency>
         <dependency>
             <groupId>io.appium</groupId>
             <artifactId>java-client</artifactId>
-            <version>7.0.0</version>
+            <version>8.1.1</version>
         </dependency>
         <dependency>
             <groupId>com.browserstack</groupId>
@@ -96,6 +96,9 @@
                             <includes>
                                 <include>FirstTest.java</include>
                             </includes>
+                            <systemPropertyVariables>
+                                <config>run_first_test/first.conf.json</config>
+                            </systemPropertyVariables>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -110,9 +113,18 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
+                            <parallel>
+                                classes
+                            </parallel>
+                            <threadCount>
+                                2
+                            </threadCount>
                             <includes>
-                                <include>ParallelTest.java</include>
+                                <include>FirstTest.java</include>
                             </includes>
+                            <systemPropertyVariables>
+                                <config>run_parallel_test/parallel.conf.json</config>
+                            </systemPropertyVariables>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -130,6 +142,9 @@
                             <includes>
                                 <include>LocalTest.java</include>
                             </includes>
+                            <systemPropertyVariables>
+                                <config>run_local_test/local.conf.json</config>
+                            </systemPropertyVariables>
                         </configuration>
                     </plugin>
                 </plugins>
