--- a/android/junit5-examples/pom.xml
+++ b/android/junit5-examples/pom.xml
@@ -113,12 +113,8 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <parallel>
-                                classes
-                            </parallel>
-                            <threadCount>
-                                2
-                            </threadCount>
+                            <parallel>classes</parallel>
+                            <threadCount>2</threadCount>
                             <includes>
                                 <include>FirstTest.java</include>
                             </includes>
