--- a/android/junit4-examples/browserstack.yml
+++ b/android/junit4-examples/browserstack.yml
@@ -16,7 +16,7 @@ accessKey: YOUR_ACCESS_KEY
 # Ensure you add a dynamic identifier, like an incremental build number from your
 # CI/CD or timestamp at the end of every build; otherwise tests from different
 # executions will be grouped together on BrowserStack
-buildName: browserstack-build-1
+buildName: browserstack-build
 # Use `projectName` to set the name of your project. Example, Marketing Website
 projectName: BrowserStack Samples
 # Use `framework` to set the framework of your project. Example, testng, cucumber, cucumber-testng
