--- a/android/junit4-examples/browserstack.yml
+++ b/android/junit4-examples/browserstack.yml
@@ -1,30 +1,33 @@
 # =============================
 # Set BrowserStack Credentials
 # =============================
-# Add your BrowserStack userName and accessKey here or set BROWSERSTACK_USERNAME and
+# Add your BrowserStack userName and acccessKey here or set BROWSERSTACK_USERNAME and
 # BROWSERSTACK_ACCESS_KEY as env variables
-userName: YOUR_USERNAME
-accessKey: YOUR_ACCESS_KEY
+userName: BROWSERSTACK_USERNAME
+accessKey: BROWSERSTACK_ACCESS_KEY
 
 # ======================
-# Organizing your tests
+# BrowserStack Reporting
 # ======================
-# Use `projectName`, `buildName`, `name` capabilities to organize your tests
-# `name` is the name of your test sessions and is automatically picked from your
-# test name and doesn't need to be set manually when using BrowserStack SDK
-# `buildName` is used to name your CI/CD job or the execution of your test suite.
-# Ensure you add a dynamic identifier, like an incremental build number from your
-# CI/CD or timestamp at the end of every build; otherwise tests from different
-# executions will be grouped together on BrowserStack
-buildName: browserstack-build
-# Use `projectName` to set the name of your project. Example, Marketing Website
+# The following capabilities are used to set up reporting on BrowserStack:
+# Set 'projectName' to the name of your project. Example, Marketing Website
 projectName: BrowserStack Samples
-# Use `framework` to set the framework of your project. Example, testng, cucumber, cucumber-testng
+# Set `buildName` as the name of the job / testsuite being run
+buildName: browserstack build
+# `buildIdentifier` is a unique id to differentiate every execution that gets appended to
+# buildName. Choose your buildIdentifier format from the available expressions:
+# ${BUILD_NUMBER} (Default): Generates an incremental counter with every execution
+# ${DATE_TIME}: Generates a Timestamp with every execution. Eg. 05-Nov-19:30
+# Read more about buildIdentifiers here -> https://www.browserstack.com/docs/automate/selenium/organize-tests
+buildIdentifier: '#${BUILD_NUMBER}' # Supports strings along with either/both ${expression}
+# Set `framework` of your test suite. Example, `testng`, `cucumber`, `cucumber-testng`
+# This property is needed to send test context to BrowserStack (test name, status)
 framework: junit4
 
-source: junit:sample-sdk:v1.0
+source: junit4:appium-sample-sdk:v1.0
 
 app: ../WikipediaSample.apk
+#app: ../LocalSample.apk #For running local tests
 
 # =======================================
 # Platforms (Browsers / Devices to test)
