--- a/android/junit4-examples/pom.xml
+++ b/android/junit4-examples/pom.xml
@@ -14,7 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <surefire.version>3.0.0-M5</surefire.version>
 
-        <config.file>default</config.file>
+        <config.file>FirstTest.java</config.file>
     </properties>
 
     <dependencies>
@@ -70,9 +70,16 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit47</artifactId>
+                        <version>${surefire.version}</version>
+                    </dependency>
+                </dependencies>
                 <configuration>
                     <includes>
-                        <include>com/browserstack/FirstTest.java</include>
+                        <include>${config.file}</include>
                     </includes>
                     <argLine>-javaagent:${com.browserstack:browserstack-java-sdk:jar}</argLine>
                 </configuration>
