--- a/ios/junit4-examples/pom.xml
+++ b/ios/junit4-examples/pom.xml
@@ -70,6 +70,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit47</artifactId>
+                        <version>${surefire.version}</version>
+                    </dependency>
+                </dependencies>
                 <configuration>
                     <includes>
                         <include>com/browserstack/FirstTest.java</include>
