--- a/junit-4/ios/browserstack.yml
+++ b/junit-4/ios/browserstack.yml
@@ -42,8 +42,8 @@ platforms:
   - deviceName: iPhone 13 Pro
     platformVersion: 15
     platformName: ios
-  - deviceName: iPhone XS
-    platformVersion: 14
+  - deviceName: iPhone 12 Pro
+    platformVersion: 17
     platformName: ios
 
 # =======================
