--- a/junit-4/ios/browserstack.yml
+++ b/junit-4/ios/browserstack.yml
@@ -42,7 +42,7 @@ platforms:
   - deviceName: iPhone 13 Pro
     platformVersion: 15
     platformName: ios
-  - deviceName: iPhone 12 Pro
+  - deviceName: iPhone 12
     platformVersion: 17
     platformName: ios
 
