--- a/.github/workflows/sanity-workflow.yml
+++ b/.github/workflows/sanity-workflow.yml
@@ -72,6 +72,22 @@ jobs:
           cd junit-4/ios
           mvn compile
           mvn test -P sample-local-test -D"browserstack.app"="./LocalSample.ipa"
+      - name:  Run gradle test for junit4 android  
+        run: |
+          cd junit-4/android
+          gradle clean sampleTest
+      - name:  Run gradle sample-local-test for junit4 android  
+        run: |
+          cd junit-4/android
+          gradle clean sampleLocalTest -D"browserstack.app"="./LocalSample.apk"
+      - name:  Run gradle test for junit4 ios  
+        run: |
+          cd junit-4/ios
+          gradle clean sampleTest
+      - name:  Run gradle sample-local-test for junit4 ios  
+        run: |
+          cd junit-4/ios
+          gradle clean sampleLocalTest -D"browserstack.app"="./LocalSample.ipa"    
       - name: Run mvn test for junit5 android
         run: |
           cd junit-5/android
@@ -92,6 +108,22 @@ jobs:
           cd junit-5/ios
           mvn compile
           mvn test -P sample-local-test -D"browserstack.app"="./LocalSample.ipa"
+      - name:  Run gradle test for junit5 android  
+        run: |
+          cd junit-5/android
+          gradle clean sampleTest
+      - name:  Run gradle sample-local-test for junit4 android  
+        run: |
+          cd junit-5/android
+          gradle clean sampleLocalTest -D"browserstack.app"="./LocalSample.apk"
+      - name:  Run gradle test for junit4 ios  
+        run: |
+          cd junit-5/ios
+          gradle clean sampleTest
+      - name:  Run gradle sample-local-test for junit4 ios  
+        run: |
+          cd junit-5/ios
+          gradle clean sampleLocalTest -D"browserstack.app"="./LocalSample.ipa"     
       - if: always()
         uses: actions/github-script@98814c53be79b1d30f795b907e553d8679345975
         id: status-check-completed
